# IfcOpenShell-1

./: FindIfcGeom.cmake  FindIfcParse.cmake  conanfile.py
.circleci/: config.yml
cmake/: CMakeLists.txt
src/ifcwrap/: CMakeLists.txt
